# fqdn-updater

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  README_EN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml  install.sh  pyproject.toml
.codex/: hooks.json  slices.json
.codex/agents/: finisher.toml  python_worker.toml  slice_gatekeeper.toml  slice_preparer.toml  test_builder.toml
.codex/artifacts/: s17_config_management_cli.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: verify.yml
docs/: CLI_REFERENCE.md  CONFIGURATION.md  DEPLOYMENT.md  INSTALLER_SECURITY_SLICES.md  KEENETIC_RCI_SETUP.md  LLM_CONTEXT.md  PANEL.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  TROUBLESHOOTING.md  USER_QUICKSTART.md
examples/: config.example.json  fqdn-updater.service  fqdn-updater.timer
scripts/: tmux-codex.sh  tmux-start-codex.sh  verify.sh
source-lists/: direct-custom.lst  direct-no-vpn.lst
src/fqdn_updater/: __init__.py  __main__.py
tests/application/: test_config_management.py  test_dry_run_orchestration.py  test_password_generation.py  test_route_target_discovery.py  test_run_history.py  test_run_support.py  test_service_plan_apply.py  test_service_sync_planning.py  test_source_loading_service.py  test_status_diagnostics.py  test_sync_orchestration.py
tests/cli/: panel_test_support.py  test_app.py  test_panel_controller.py  test_panel_prompts.py  test_panel_route_target_discovery.py  test_panel_run_add_router_return.py  test_panel_runs.py
tests/domain/: test_config_schema.py  test_default_route.py  test_keenetic.py  test_object_group_diff.py  test_object_group_entry.py  test_object_group_sharding.py  test_route_binding_diff.py  test_run_artifact.py  test_schedule.py  (+4 more)
(+76 files in other folders)
