[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fqdn-updater"
version = "1.0.0"
description = "Source-available noncommercial CLI for synchronizing managed FQDN object-groups on Keenetic routers."
readme = "README.md"
requires-python = ">=3.10"
license = "PolyForm-Noncommercial-1.0.0"
dependencies = [
  "pydantic>=2.8,<3",
  "questionary>=2.1,<3",
  "qrcode>=7.4,<9",
  "rich>=13,<15",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
fqdn-updater = "fqdn_updater.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
